# elSandbox

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  log  main.cpp
ecs/: .gitignore  Makefile  Makefile~  ToDo.memo  log  test.cpp
ecs/fwd/: Config.hpp  Scheduler.hpp  Worker.hpp
ecs/include/: Config.hpp  Entity.hpp  EntityHandle.hpp  Job.hpp  LegacySignature.hpp  Machinery.hpp  Manager.hpp  Scheduler.hpp  Settings.hpp  Signature.cpp  Signature.hpp  SignatureBitset.hpp  SignatureConcept.hpp  System.hpp  SystemSpecs.hpp  Worker.hpp  el  fwd  unit-tests-setup.hpp
ecs/src/: Entity.cpp  EntityHandle.cpp  Manager.cpp  main.cpp
ecs/src/example/: main.cpp
ecs/src/tests/: EntityHandle_test.cpp  Entity_test.cpp  Machinery_test.cpp  Manager_test.cpp  Scheduler_test.cpp  System_test.cpp
el/: conditional.hpp  declval.hpp  enable_if.hpp  is_same.hpp  is_same_game.hpp  move.hpp  remove_const.hpp  remove_cv.hpp  remove_ref.hpp  remove_volatile.hpp  static_if.hpp
el/detail/: and.hpp  exists.hpp  pretty_print.hpp
el/fwd/type_list/: type_list.hpp
el/type_list/: at.hpp  contains.hpp  every.hpp  filter.hpp  for_each.hpp  includes.hpp  index_of.hpp  last.hpp  reduce.hpp  some.hpp  type_list.cpp  type_list.hpp
el/types/: at.hpp  integral_c.hpp  is_valid.hpp  map.cpp  map.hpp  nothing.hpp  pair.hpp  tag.hpp  type_c.hpp  void.hpp
ps/: ecs
ps/include/: ps.hpp
